--- a/app/src/main/res/layout/item_meeting.xml
+++ b/app/src/main/res/layout/item_meeting.xml
@@ -109,7 +109,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/guests_email_list"
+                android:id="@+id/guests_email_chip_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
