--- a/app/src/main/res/layout/meeting_list_activity.xml
+++ b/app/src/main/res/layout/meeting_list_activity.xml
@@ -19,7 +19,7 @@
         android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="@id/toolbar"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        tools:listitem="@layout/item_meeting" />
+        tools:listitem="@layout/item_meeting_scalable" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
