Commit : filer by Room fragment creation

--- a/app/src/main/res/layout/item_meeting_scalable.xml
+++ b/app/src/main/res/layout/item_meeting_scalable.xml
@@ -69,7 +69,7 @@
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
-                android:text="@string/reunion_item"
+                android:text="@string/meeting_topic"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/meeting_time"
@@ -99,10 +99,10 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/constraint_layout_meeting"
                 app:layout_constraintEnd_toEndOf="@id/constraint_layout_meeting"
-                app:layout_constraintStart_toEndOf="@+id/guests_email_chip_group" />
+                app:layout_constraintStart_toEndOf="@+id/guests_email_group" />
 
             <TextView
-                android:id="@+id/guests_email_chip_group"
+                android:id="@+id/guests_email_group"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
