--- a/app/src/main/res/menu/menu_meeting_list.xml
+++ b/app/src/main/res/menu/menu_meeting_list.xml
@@ -21,8 +21,8 @@
                 app:showAsAction="never" />
 
             <item
-                android:id="@+id/resetFilter"
-                android:title="@string/resetFilter"
+                android:id="@+id/filterReset"
+                android:title="@string/filterReset"
                 app:showAsAction="never" />
         </menu>
     </item>
