--- a/app/src/main/res/layout/meeting_list_activity.xml
+++ b/app/src/main/res/layout/meeting_list_activity.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:paddingBottom="60dp"
         app:layout_constraintStart_toStartOf="@id/toolbar"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:listitem="@layout/item_meeting_scalable" />
