--- a/app/src/main/res/layout/list_room_fragment.xml
+++ b/app/src/main/res/layout/list_room_fragment.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_room"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:background="@color/primaryTextColor"/>
 
 
