Commit : MeetingDetailsDialogFragment bug

--- a/app/src/main/res/layout/item_meeting_scalable.xml
+++ b/app/src/main/res/layout/item_meeting_scalable.xml
@@ -41,7 +41,7 @@
 
             <TextView
                 android:id="@+id/meeting_room"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_default"
                 android:layout_marginStart="@dimen/margin_default"
