--- a/app/src/main/res/layout/meeting_details_fragment.xml
+++ b/app/src/main/res/layout/meeting_details_fragment.xml
@@ -7,9 +7,8 @@
     android:padding="@dimen/cardview_default_margin"
     tools:context=".ui_meeting_list.ListMeetingActivity">
 
-
     <TextView
-        android:id="@+id/reunion_name"
+        android:id="@+id/detail_meeting_topic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -22,19 +21,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/spinner_duration_action"
+        android:id="@+id/detail_meeting_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/time_spinner_duration"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/room_detail"
+        app:layout_constraintBottom_toBottomOf="@+id/detail_meeting_room"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/room_detail" />
+        app:layout_constraintStart_toEndOf="@+id/detail_meeting_room" />
 
     <TextView
-        android:id="@+id/date_detail"
+        android:id="@+id/detail_meeting_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -42,14 +41,14 @@
         android:layout_marginBottom="16dp"
         android:text="@string/date_item"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/room_detail"
-        app:layout_constraintEnd_toStartOf="@+id/time_detail"
+        app:layout_constraintBottom_toTopOf="@+id/detail_meeting_room"
+        app:layout_constraintEnd_toStartOf="@+id/detail_meeting_time"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reunion_name" />
+        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_topic" />
 
     <TextView
-        android:id="@+id/room_detail"
+        android:id="@+id/detail_meeting_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -57,14 +56,14 @@
         android:layout_marginBottom="16dp"
         android:text="@string/spinner_meeting_room"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/list_title"
-        app:layout_constraintEnd_toStartOf="@+id/spinner_duration_action"
+        app:layout_constraintBottom_toTopOf="@+id/detail_list_title"
+        app:layout_constraintEnd_toStartOf="@+id/detail_meeting_duration"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_date" />
 
     <TextView
-        android:id="@+id/list_title"
+        android:id="@+id/detail_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -72,41 +71,36 @@
         android:layout_marginBottom="16dp"
         android:text="@string/guest_list"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/detail_guests_email_recyclerview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/room_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_room" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/guests_email_chip_group"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/detail_guests_email_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:flow_horizontalAlign="start"
+        app:chipSpacingVertical="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_title"
-        tools:ignore="NestedScrolling" />
+        app:layout_constraintTop_toBottomOf="@+id/detail_list_title" />
 
     <TextView
-        android:id="@+id/time_detail"
+        android:id="@+id/detail_meeting_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/hour_item"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/date_detail"
+        app:layout_constraintBottom_toBottomOf="@+id/detail_meeting_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/date_detail" />
-
+        app:layout_constraintStart_toEndOf="@+id/detail_meeting_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
