--- a/app/src/main/res/layout/room_dropdown_item.xml
+++ b/app/src/main/res/layout/room_dropdown_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/spinner_width"
-    android:layout_height="@dimen/spinner_item_height">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/meeting_room_icon"
-        android:layout_width="@dimen/spinner_item_height"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_margin="1dp"
         android:src="@drawable/ic_icons_konqueror"
