--- a/app/src/main/res/menu/menu_meeting_list.xml
+++ b/app/src/main/res/menu/menu_meeting_list.xml
@@ -5,24 +5,27 @@
     <item
         android:id="@+id/menu_meeting_list_activity"
         android:icon="@drawable/ic_action_filter"
-        android:title="@string/filter"
+        android:title="@string/filter_menu"
         app:showAsAction="ifRoom">
 
         <menu>
 
             <item
+                android:orderInCategory="1"
                 android:id="@+id/filterRoom"
-                android:title="@string/filterByRoom"
+                android:title="@string/filter_by_room"
                 app:showAsAction="never" />
 
             <item
+                android:orderInCategory="2"
                 android:id="@+id/filterDate"
-                android:title="@string/filterByDate"
+                android:title="@string/filter_by_date"
                 app:showAsAction="never" />
 
             <item
+                android:orderInCategory="3"
                 android:id="@+id/filterReset"
-                android:title="@string/filterReset"
+                android:title="@string/filter_reset"
                 app:showAsAction="never" />
         </menu>
     </item>
