--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="dark_grey">#282828</color>
+    <color name="dark_grey">#121212</color>
+    <color name="grey">#282828</color>
     <color name="mid_grey">#646464</color>
     <color name="light_grey">#969696</color>
     <color name="white">#FFFFFFFF</color>
@@ -11,5 +12,5 @@
     <color name="lamzone_700">#c97b63</color>
     <color name="lamzone_900">#a1887f</color>
     <color name="primaryTextColor">#FFF0E6</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#121212</color>
 </resources>
