--- a/app/src/main/res/layout/meeting_details_fragment.xml
+++ b/app/src/main/res/layout/meeting_details_fragment.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:padding="@dimen/cardview_default_margin"
     tools:context=".ui_meeting_list.ListMeetingActivity">
 
@@ -85,7 +86,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:chipSpacingVertical="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/detail_action_ok"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,5 +103,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/detail_meeting_date" />
+
+    <TextView
+        android:id="@+id/detail_action_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="OK"
+        android:textColor="@color/lamzone_700"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_guests_email_recyclerview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
