--- a/app/src/main/res/layout/room_dropdown_item.xml
+++ b/app/src/main/res/layout/room_dropdown_item.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/meeting_room_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="1dp"
         android:layout_margin="1dp"
         android:src="@drawable/ic_icons_konqueror"
