--- a/app/src/main/res/layout/item_meeting_scalable.xml
+++ b/app/src/main/res/layout/item_meeting_scalable.xml
@@ -46,10 +46,6 @@
                 android:layout_marginHorizontal="@dimen/margin_default"
                 android:layout_marginStart="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
                 android:text="@string/spinner_meeting_room"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -63,11 +59,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
-                android:ellipsize="marquee"
-                android:freezesText="false"
+                android:ellipsize="none"
+                android:freezesText="true"
                 android:gravity="center_horizontal"
                 android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
+                android:scrollHorizontally="false"
                 android:singleLine="true"
                 android:text="@string/meeting_topic"
                 android:textSize="16sp"
@@ -107,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
-                android:ellipsize="marquee"
+                android:ellipsize="none"
                 android:freezesText="true"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
