--- a/app/src/main/res/layout/meeting_details_activity.xml
+++ b/app/src/main/res/layout/meeting_details_activity.xml
@@ -12,6 +12,7 @@
         android:id="@+id/detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/meeting_detail"
         android:textSize="@dimen/text_size_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/detail_sujet"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_room"
@@ -45,7 +47,9 @@
         android:id="@+id/info_detail_meeting_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/detail_salle"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_date"
@@ -79,7 +83,9 @@
         android:id="@+id/info_detail_meeting_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/detail_date"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_time"
@@ -102,7 +108,9 @@
         android:id="@+id/info_detail_meeting_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/detail_heure"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintBottom_toTopOf="@+id/info_detail_meeting_duration"
@@ -125,7 +133,9 @@
         android:id="@+id/info_detail_meeting_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/detail_duree"
         android:textSize="@dimen/text_size_normal"
         app:layout_constraintBottom_toTopOf="@+id/detail_list_title"
@@ -162,11 +172,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_default"
-        android:layout_marginTop="@dimen/margin_default"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/margin_default"
-        android:layout_marginBottom="@dimen/margin_default"
-        app:chipSpacingVertical="2dp"
         android:textSize="@dimen/text_size_normal"
+        app:chipSpacingVertical="2dp"
         app:layout_constraintBottom_toTopOf="@+id/detail_action_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
