Commit : all tests pass

--- a/app/src/main/res/layout/item_meeting_scalable.xml
+++ b/app/src/main/res/layout/item_meeting_scalable.xml
@@ -59,8 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
-                android:ellipsize="none"
-                android:freezesText="true"
+                android:ellipsize="marquee"
                 android:gravity="center_horizontal"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="false"
@@ -103,8 +102,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_default"
                 android:layout_marginEnd="@dimen/margin_default"
-                android:ellipsize="none"
-                android:freezesText="true"
+                android:ellipsize="marquee"
+
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
