--- a/app/src/main/res/layout-land/meeting_details_activity.xml
+++ b/app/src/main/res/layout-land/meeting_details_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/meeting_details_activity"
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     tools:context=".ui_meeting_list.ListMeetingActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/detail_title"
@@ -45,6 +49,17 @@
             app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_topic" />
 
         <TextView
+            android:id="@+id/info_detail_meeting_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/detail_salle"
+            android:textSize="@dimen/text_size_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline5"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+        <TextView
             android:id="@+id/detail_meeting_room"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,17 +73,6 @@
             app:layout_constraintStart_toStartOf="@+id/guideline1"
             app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_room" />
 
-        <TextView
-            android:id="@+id/info_detail_meeting_room"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/detail_salle"
-            android:textSize="@dimen/text_size_medium"
-            app:layout_constraintBottom_toBottomOf="@+id/guideline5"
-            app:layout_constraintEnd_toStartOf="@+id/guideline1"
-            app:layout_constraintTop_toTopOf="@+id/guideline5" />
-
         <ImageView
             android:id="@+id/detail_meeting_room_image"
             android:layout_width="wrap_content"
@@ -79,6 +83,17 @@
             app:layout_constraintStart_toEndOf="@+id/detail_meeting_room"
             app:layout_constraintTop_toTopOf="@+id/detail_meeting_room"
             app:srcCompat="@drawable/ic_icons_konqueror" />
+
+        <TextView
+            android:id="@+id/info_detail_meeting_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/detail_date"
+            android:textSize="@dimen/text_size_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline4"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <TextView
             android:id="@+id/detail_meeting_date"
@@ -93,14 +108,14 @@
             app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_date" />
 
         <TextView
-            android:id="@+id/info_detail_meeting_date"
+            android:id="@+id/info_detail_meeting_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="@string/detail_date"
+            android:text="@string/detail_heure"
             android:textSize="@dimen/text_size_medium"
             app:layout_constraintBottom_toBottomOf="@+id/guideline4"
-            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <TextView
@@ -114,17 +129,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/info_detail_meeting_time"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="@+id/info_detail_meeting_time" />
-
-        <TextView
-            android:id="@+id/info_detail_meeting_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/detail_heure"
-            android:textSize="@dimen/text_size_medium"
-            app:layout_constraintBottom_toBottomOf="@+id/guideline4"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
         <TextView
             android:id="@+id/info_detail_meeting_duration"
@@ -160,40 +164,41 @@
             android:layout_marginBottom="16dp"
             android:text="@string/guest_list"
             android:textSize="@dimen/text_size_medium"
-            app:layout_constraintBottom_toTopOf="@+id/detail_guests_email_recyclerview"
+            app:layout_constraintBottom_toTopOf="@+id/detail_guests_recycler_view_email_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_detail_meeting_room" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/detail_guests_email_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:textSize="@dimen/text_size_medium"
-        app:chipSpacingVertical="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/detail_action_close"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_list_title" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/detail_guests_recycler_view_email_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="@dimen/text_size_medium"
+            app:chipSpacingVertical="2dp"
+            app:layout_constraintBottom_toTopOf="@+id/detail_action_close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_list_title"
+            tools:listitem="@layout/item_detail_guest" />
 
-    <Button
-        android:id="@+id/detail_action_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="@string/detail_back"
-        android:textColor="@color/lamzone_200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_guests_email_recyclerview" />
+        <Button
+            android:id="@+id/detail_action_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="@string/detail_back"
+            android:textColor="@color/lamzone_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_guests_recycler_view_email_list" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
@@ -230,4 +235,5 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
